new URL structure in metatags

--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/" />
 <meta name="twitter:title" content="" />
 <meta name="twitter:description" content="" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="EN" />
-<link rel="alternate" hreflang="fr" href="" />
-<link rel="alternate" hreflang="it" href="" />
-<link rel="alternate" hreflang="x-default" href="EN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/" />
+<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/" />
+<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -106,16 +106,17 @@
 
 </head>
 
-<body class="stretched page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800"></body>
+<body class="stretched page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500"
+	data-animation-out="fadeOut" data-speed-out="800"></body>
 
-	<!-- Document Wrapper
+<!-- Document Wrapper
 	============================================= -->
-	<div id="wrapper">
+<div id="wrapper">
 
-		<!-- Header
+	<!-- Header
 		============================================= -->
-		<!-- header -->
-		<!-- Only Required if Icons are shown on page -->
+	<!-- header -->
+	<!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
 <link rel="preload" href="./css/font-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
@@ -276,17 +277,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
@@ -300,29 +301,29 @@
   </div>
   <div class="header-wrap-clone"></div>
 </header>
-		<!-- end of header -->
+	<!-- end of header -->
 
-		<section id="slider" class="slider-element min-vh-100 dark error404-wrap include-header"
-			style="background: url(images/404.jpg) left / cover no-repeat;">
-			<div class="slider-inner">
+	<section id="slider" class="slider-element min-vh-100 dark error404-wrap include-header"
+		style="background: url(images/404.jpg) left / cover no-repeat;">
+		<div class="slider-inner">
 
-				<div class="vertical-middle">
-					<div class="container text-center py-5 py-md-0">
+			<div class="vertical-middle">
+				<div class="container text-center py-5 py-md-0">
 
-						<div class="error404">404</div>
+					<div class="error404">404</div>
 
-						<div class="heading-block border-bottom-0">
-							<h4>Ooopps! The page you were looking for couldn't be found.</h4>
-						</div>
-						<a type="button" class="btn btn-outline-primary" href="">Come back home</a>
+					<div class="heading-block border-bottom-0">
+						<h4>Ooopps! The page you were looking for couldn't be found.</h4>
 					</div>
+					<a type="button" class="btn btn-outline-primary" href="">Come back home</a>
 				</div>
-
 			</div>
-		</section>
 
-		<!-- Footer -->
-		<style>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<style>
   #footer {
     --cnvs-socialicon-color: #645439;
     --cnvs-footer-bg: #fdedd2;
@@ -366,19 +367,19 @@
 
   </div>
 </footer>
-		<!-- end Footer -->
+	<!-- end Footer -->
 
-	</div><!-- #wrapper end -->
+</div><!-- #wrapper end -->
 
 
-	<!-- Javascripts
+<!-- Javascripts
 	============================================= -->
-	<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
-	<!-- Tawk Chatbox -->
-	<!-- place holder for include('src/blocks/tawk.html') -->
+<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
+<!-- Tawk Chatbox -->
+<!-- place holder for include('src/blocks/tawk.html') -->
 
-	<!-- Canvas Scripts -->
-	<script src="js/functions.js"></script>
+<!-- Canvas Scripts -->
+<script src="js/functions.js"></script>
 
 
 </body>
