--- a/TDR-Duty-Free-Returns-to-Europe.html
+++ b/TDR-Duty-Free-Returns-to-Europe.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="TDR Duty-Free Returns to Europe | Simplify and Save on Returns" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Reduce costs on eCommerce returns with TDR Duty-Free Returns to Europe. Avoid import duties on returned goods. Simplify the process and maximize profitability." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="TDR-Duty-Free-Returns-to-Europe.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/TDR-Duty-Free-Returns-to-Europe.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="TDR-Duty-Free-Returns-to-Europe.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/TDR-Duty-Free-Returns-to-Europe.html" />
 <meta name="twitter:title" content="TDR Duty-Free Returns to Europe | Simplify and Save on Returns" />
 <meta name="twitter:description" content="Reduce costs on eCommerce returns with TDR Duty-Free Returns to Europe. Avoid import duties on returned goods. Simplify the process and maximize profitability." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="TDR-Duty-Free-Returns-to-Europe.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/TDR-Duty-Free-Returns-to-Europe.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/TDR-Duty-Free-Returns-to-Europe.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/TDR-Duty-Free-Returns-to-Europe.html" />
-<link rel="alternate" hreflang="x-default" href="TDR-Duty-Free-Returns-to-Europe.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/TDR-Duty-Free-Returns-to-Europe.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -337,17 +337,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
@@ -620,7 +620,7 @@
                     criteria.<br><br>
                     Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free
                     importation worldwide, helping you reclaim duties at every possible point in your supply chain.
-                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com">more ways TDR can
+                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com/">more ways TDR can
                       enhance your cash flow</a> and benefit
                     your organization.
                   </p>
