--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="About TDR | Your Global Trade Partner" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Maximize your profits by minimizing import duties and maximizing duty recovery with TDR." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="about-us.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/about-us.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="about-us.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/about-us.html" />
 <meta name="twitter:title" content="About TDR | Your Global Trade Partner" />
 <meta name="twitter:description" content="Maximize your profits by minimizing import duties and maximizing duty recovery with TDR." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="about-us.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/about-us.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/about-us.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/about-us.html" />
-<link rel="alternate" hreflang="x-default" href="about-us.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/about-us.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -93,7 +93,8 @@
 	</style>
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn"
+	data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
 
 	<!-- Document Wrapper
 	============================================= -->
@@ -263,17 +264,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
@@ -392,7 +393,8 @@
 									documentation, and claims with customs authorities.
 								</li>
 								<li>
-									<strong>Duty Recovery Expertise</strong>: From reclaiming duties on returned items to facilitating duty
+									<strong>Duty Recovery Expertise</strong>: From reclaiming duties on returned items to facilitating
+									duty
 									drawback processes,
 									we help businesses recover costs at every opportunity.
 								</li>
