--- a/e-book-a-practical-guide-to-customs-duties-on-returns.html
+++ b/e-book-a-practical-guide-to-customs-duties-on-returns.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Master Customs Strategies for eCommerce: Free eBook by Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Download Trade Duty Refund's free eBook to master customs strategies and reduce eCommerce returns costs. Get insights on duty management, market trends, regulation updates, and more. Simplify your international trade today!" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="e-book-a-practical-guide-to-customs-duties-on-returns.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="e-book-a-practical-guide-to-customs-duties-on-returns.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
 <meta name="twitter:title" content="Master Customs Strategies for eCommerce: Free eBook by Trade Duty Refund" />
 <meta name="twitter:description" content="Download Trade Duty Refund's free eBook to master customs strategies and reduce eCommerce returns costs. Get insights on duty management, market trends, regulation updates, and more. Simplify your international trade today!" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="e-book-a-practical-guide-to-customs-duties-on-returns.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
-<link rel="alternate" hreflang="x-default" href="e-book-a-practical-guide-to-customs-duties-on-returns.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/e-book-a-practical-guide-to-customs-duties-on-returns.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -52,6 +52,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="Duty Ref" />
 <link rel="manifest" href="/images/favicon/site.webmanifest" />
+
 
 	<!-- CSS imports -->
 	<!-- Font Imports -->
@@ -90,7 +91,8 @@
 
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn"
+	data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
 
 	<!-- Document Wrapper
 	============================================= -->
@@ -260,17 +262,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
@@ -333,47 +335,79 @@
 					<div class="contact-form-overlay col-md-8 offset-md-2 p-5">
 						<h2 class="fw-normal ls-0 text-transform-none mb-4 font-primary h1">Download Your Free Edition!</h2>
 						<p class="text-lightSamaritan">
-							Fill in the form below and we'll send you a link with a free access to our ebook.
+							Fill in the form below to launch the file download.
 						</p>
-
-						<!-- Contact Form
+						<div class="">
+							<!-- Contact Form
 							============================================= -->
-						<form class="row mb-0" id="contactForm" action="https://api.staticforms.xyz/submit" method="post">
-							<fieldset>
+							<form class="row mb-0" id="contactForm" action="https://api.staticforms.xyz/submit" method="post"
+								onSubmit="addSpinner()">
 								<!-- required by staticForms.xyz -->
 								<input type="hidden" name="accessKey" value="e86b9da0-06b6-4d49-a19d-0825c9b33446">
 								<!-- If you want form to redirect to a specific url after submission -->
 								<input id="redirectTo" type="hidden" name="redirectTo" value="">
 								<!-- Customize Subject to help Google AppScript identify emails -->
 								<input type="hidden" name="subject" value="Autom-Ebook1-Request">
+								<!-- Spam prevention -->
+								<input type="text" name="honeypot" style="display:none">
 
-								<div class="col-md-6 mx-md-auto form-group">
-									<label for="firstName">First Name <small>*</small></label>
-									<input type="text" id="firstName" name="$firstName" class="form-control" required>
+								<div class="col-md-6 form-group">
+									<label for="firstName">First Name</label>
+									<input type="text" id="firstName" name="$firstName" class="form-control required" required>
 								</div>
 
-								<div class="col-md-6 mx-md-auto form-group">
-									<label for="name">Name <small>*</small></label>
-									<input type="text" id="name" name="name" class="form-control" required>
+								<div class="col-md-6 form-group">
+									<label for="name">Name</label>
+									<input type="text" id="name" name="name" class="form-control required" required>
 								</div>
 
-								<div class="col-md-6 mx-md-auto form-group">
-									<label for="email">Email <small>*</small></label>
+								<div class="w-100"></div>
+
+								<div class="col-md-6 form-group">
+									<label for="email">Work Email</label>
 									<input type="email" id="email" name="email"
 										pattern=pattern="(?![_.-])((?![_.-][_.-])[a-zA-Z\d_.-]){0,63}[a-zA-Z\d]@((?!-)((?!--)[a-zA-Z\d-]){0,63}[a-zA-Z\d]\.){1,2}([a-zA-Z]{2,14}\.)?[a-zA-Z]{2,14}"
 										class="form-control" required>
 								</div>
 
-								<div class=""></div>
+								<div class="col-md-6 form-group">
+									<label for="company">Company</label>
+									<input type="text" id="company" name="$company" class="form-control" required>
+								</div>
 
-								<div class="col-md-6 mx-md-auto form-group">
-									<input class="btn btn-light" type="submit" value="submit">
-									</input>
+								<div class="w-100"></div>
+
+								<div class="col-md-6 form-group">
+									<label for="title">Title</label>
+									<input type="text" id="title" name="$title" class="form-control" required>
+								</div>
+
+								<div class="col-md-6 form-group d-flex flex-column justify-content-center mb-0">
+									<div>
+										<input id="radio-4" class="radio-style" name="$subscribeNewsletter" type="radio" required>
+										<label for="radio-4" class="radio-style-1-label">Subscribe to our monthly newsletter</label>
+									</div>
+									<div>
+										<input id="radio-5" class="radio-style" name="radio-group-1" type="radio">
+										<label for="radio-5" class="radio-style-1-label">Do not subscribe</label>
+									</div>
+								</div>
+
+								<div class="w-100"></div>
+
+								<div class="col-md-12 form-group">
+									<button class="btn btn-light" type="submit" value="Submit">
+										<span id="btn-spinner" aria-hidden="true"></span>
+										<span class="visually-hidden" role="status">Loading...</span>
+										Submit
+									</button>
+
 									<!-- <button class="g-recaptcha" data-sitekey="6LfK0JYqAAAAACn4qq-1KudtU3Yx77odbPPA76z7"
 											data-callback='onSubmit' data-action='submit'>Submit</button> -->
 								</div>
-							</fieldset>
-						</form>
+
+							</form>
+						</div>
 					</div>
 
 				</div><!-- Contact Form Overlay End -->
@@ -381,8 +415,6 @@
 
 	</div>
 	</section>
-
-
 
 	<style>
   #footer {
@@ -445,7 +477,7 @@
 			const currentDomain = window.location.origin;
 
 			// Construct the new URL path
-			const newPath = "/ebook-download-success.html";
+			const newPath = "/ebook-download-page.html";
 
 			// Combine the domain and the new path
 			const newURL = currentDomain + newPath;
@@ -456,6 +488,12 @@
 				redirectToInput.value = newURL;
 			}
 		});
+
+		function addSpinner() {
+			const spinnerElement = document.getElementById("btn-spinner");
+			spinnerElement.classList.add("spinner-border", "spinner-border-sm")
+		}
+
 	</script>
 
 
