--- a/solutions-for-all-shippers.html
+++ b/solutions-for-all-shippers.html
@@ -14,8 +14,8 @@
 </script>
   <!-- End Google Tag Manager -->
 
-  <!-- Metatags Import -->
-  <!-- SEO Metatags -->
+ <!-- Metatags Import -->
+ <!-- SEO Metatags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="TDR | End-to-End Duty Refund Solutions for eCommerce Shippers" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Simplify global eCommerce with Trade Duty Refund's comprehensive duty and tax recovery services. Reclaim import duties on US and European returns, optimize your supply chain, and boost profitability effortlessly." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="solutions-for-all-shippers.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/solutions-for-all-shippers.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="solutions-for-all-shippers.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/solutions-for-all-shippers.html" />
 <meta name="twitter:title" content="TDR | End-to-End Duty Refund Solutions for eCommerce Shippers" />
 <meta name="twitter:description" content="Simplify global eCommerce with Trade Duty Refund's comprehensive duty and tax recovery services. Reclaim import duties on US and European returns, optimize your supply chain, and boost profitability effortlessly." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="solutions-for-all-shippers.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/solutions-for-all-shippers.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/solutions-for-all-shippers.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/solutions-for-all-shippers.html" />
-<link rel="alternate" hreflang="x-default" href="solutions-for-all-shippers.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/solutions-for-all-shippers.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -262,17 +262,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
