--- a/solutions-for-eu-shippers.html
+++ b/solutions-for-eu-shippers.html
@@ -15,7 +15,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Metatags Import -->
-  <!-- SEO Metatags -->
+ <!-- SEO Metatags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="TDR | End-to-End Duty Refund Solutions for EU eCommerce Merchants" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Maximize profitability with TDR’s tailored duty recovery services for EU eCommerce shippers. Reclaim import duties on US and UK returns and re-import goods into the EU at 0% duty. Optimize your supply chain today!" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="solutions-for-eu-shippers.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/solutions-for-eu-shippers.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="solutions-for-eu-shippers.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/solutions-for-eu-shippers.html" />
 <meta name="twitter:title" content="TDR | End-to-End Duty Refund Solutions for EU eCommerce Merchants" />
 <meta name="twitter:description" content="Maximize profitability with TDR’s tailored duty recovery services for EU eCommerce shippers. Reclaim import duties on US and UK returns and re-import goods into the EU at 0% duty. Optimize your supply chain today!" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="solutions-for-eu-shippers.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/solutions-for-eu-shippers.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/solutions-for-eu-shippers.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/solutions-for-eu-shippers.html" />
-<link rel="alternate" hreflang="x-default" href="solutions-for-eu-shippers.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/solutions-for-eu-shippers.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -52,6 +52,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="Duty Ref" />
 <link rel="manifest" href="/images/favicon/site.webmanifest" />
+
 
   <!-- CSS imports -->
   <!-- Font Imports -->
@@ -262,17 +263,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
