--- a/TDR-Duty-Drawback-in-Europe.html
+++ b/TDR-Duty-Drawback-in-Europe.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="TDR Europe Duty Drawback | Reclaim EU & UK Duties on Exports" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Streamline duty recovery with TDR's Europe Duty Drawback services. Reclaim 100% of duties and VAT on goods imported into the EU or UK and later exported. Simplify your process today." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="TDR-Duty-Drawback-in-Europe.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/TDR-Duty-Drawback-in-Europe.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="TDR-Duty-Drawback-in-Europe.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/TDR-Duty-Drawback-in-Europe.html" />
 <meta name="twitter:title" content="TDR Europe Duty Drawback | Reclaim EU & UK Duties on Exports" />
 <meta name="twitter:description" content="Streamline duty recovery with TDR's Europe Duty Drawback services. Reclaim 100% of duties and VAT on goods imported into the EU or UK and later exported. Simplify your process today." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="TDR-Duty-Drawback-in-Europe.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/TDR-Duty-Drawback-in-Europe.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/TDR-Duty-Drawback-in-Europe.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/TDR-Duty-Drawback-in-Europe.html" />
-<link rel="alternate" hreflang="x-default" href="TDR-Duty-Drawback-in-Europe.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/TDR-Duty-Drawback-in-Europe.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -174,7 +174,8 @@
 
 </head>
 
-<body class="stretched darkBlue-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched darkBlue-background page-transition" data-loader="2" data-animation-in="fadeIn"
+  data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
   <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
@@ -337,17 +338,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
@@ -606,7 +607,7 @@
                     process.
                     Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free
                     importation worldwide, helping you reclaim duties at every possible point in your supply chain.
-                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com">more ways TDR can
+                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com/">more ways TDR can
                       enhance your cash flow</a> and benefit
                     your organization.
                   </p>
