--- a/TDR-Duty-Drawback-in-the-US.html
+++ b/TDR-Duty-Drawback-in-the-US.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="TDR US Duty Drawback | Reclaim Duties on Exported Goods" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Maximize cost savings with TDR's US Duty Drawback services. Reclaim up to 99% of duties on imported goods that are exported or destroyed. Simplify your duty refund process with expert guidance." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="TDR-Duty-Drawback-in-the-US.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/TDR-Duty-Drawback-in-the-US.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="TDR-Duty-Drawback-in-the-US.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/TDR-Duty-Drawback-in-the-US.html" />
 <meta name="twitter:title" content="TDR US Duty Drawback | Reclaim Duties on Exported Goods" />
 <meta name="twitter:description" content="Maximize cost savings with TDR's US Duty Drawback services. Reclaim up to 99% of duties on imported goods that are exported or destroyed. Simplify your duty refund process with expert guidance." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="TDR-Duty-Drawback-in-the-US.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/TDR-Duty-Drawback-in-the-US.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/TDR-Duty-Drawback-in-the-US.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/TDR-Duty-Drawback-in-the-US.html" />
-<link rel="alternate" hreflang="x-default" href="TDR-Duty-Drawback-in-the-US.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/TDR-Duty-Drawback-in-the-US.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -52,6 +52,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="Duty Ref" />
 <link rel="manifest" href="/images/favicon/site.webmanifest" />
+
 
   <!-- CSS imports -->
   <!-- Font Imports -->
@@ -335,17 +336,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
@@ -638,7 +639,7 @@
                   <p>As your trusted broker in the US, TDR ensures a seamless and integrated duty drawback process.
                     Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free
                     importation worldwide, helping you reclaim duties at every possible point in your supply chain.
-                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com">more ways TDR can
+                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com/">more ways TDR can
                       enhance your cash flow</a> and benefit
                     your organization.
                   </p>
