--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Trade Duty Refund | Simplifying Global Duty-Free Returns for Your Business" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Trade Duty Refund (TDR) streamlines global duty-free returns, helping businesses reclaim goods without import duties. Simplify eCommerce logistics, reduce costs, and protect your profit margins with our seamless solutions for the EU, UK, and US." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="https://tradedutyrefund.com" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/@@path" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="https://tradedutyrefund.com" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/@@path" />
 <meta name="twitter:title" content="Trade Duty Refund | Simplifying Global Duty-Free Returns for Your Business" />
 <meta name="twitter:description" content="Trade Duty Refund (TDR) streamlines global duty-free returns, helping businesses reclaim goods without import duties. Simplify eCommerce logistics, reduce costs, and protect your profit margins with our seamless solutions for the EU, UK, and US." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="https://tradedutyrefund.comEN" />
-<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com" />
-<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com" />
-<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.comEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/@@path" />
+<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/@@path" />
+<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/@@path" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/@@path" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -254,17 +254,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
