--- a/jocelyn-montpert.html
+++ b/jocelyn-montpert.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="TDR | End-to-End Duty Refund Solutions for eCommerce Shippers" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Simplify global eCommerce with Trade Duty Refund's comprehensive duty and tax recovery services. Reclaim import duties on US and European returns, optimize your supply chain, and boost profitability effortlessly." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="solutions-for-all-shippers.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/@@path" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="solutions-for-all-shippers.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/@@path" />
 <meta name="twitter:title" content="TDR | End-to-End Duty Refund Solutions for eCommerce Shippers" />
 <meta name="twitter:description" content="Simplify global eCommerce with Trade Duty Refund's comprehensive duty and tax recovery services. Reclaim import duties on US and European returns, optimize your supply chain, and boost profitability effortlessly." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="solutions-for-all-shippers.htmlEN" />
-<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/solutions-for-all-shippers.html" />
-<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/solutions-for-all-shippers.html" />
-<link rel="alternate" hreflang="x-default" href="solutions-for-all-shippers.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/@@path" />
+<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/@@path" />
+<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/@@path" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/@@path" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -107,7 +107,7 @@
 <body class="page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
   <!-- Business Card Starts -->
   <div class="card">
-    <a href="https://tradedutyrefund.com">
+    <a href="/">
       <div class="cover-photo" style="background-image: url(images/ProfileCardBannerEN.webp);">
         <img src="images/JM-Image_Profil-SansBg.webp" class="profile" />
       </div>
