--- a/make-an-appointment.html
+++ b/make-an-appointment.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Schedule a Duty Reclaim Consultation | Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="make-an-appointment.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/make-an-appointment.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="make-an-appointment.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/make-an-appointment.html" />
 <meta name="twitter:title" content="Schedule a Duty Reclaim Consultation | Trade Duty Refund" />
 <meta name="twitter:description" content="Book an appointment with our Customs expert to discover ways to reclaim duties globally. Learn how Trade Duty Refund can help eCommerce merchants save and unlock new value." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="make-an-appointment.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/make-an-appointment.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/make-an-appointment.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/make-an-appointment.html" />
-<link rel="alternate" hreflang="x-default" href="make-an-appointment.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/make-an-appointment.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -52,6 +52,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="Duty Ref" />
 <link rel="manifest" href="/images/favicon/site.webmanifest" />
+
 
 	<!-- CSS imports -->
 	<!-- Font Imports -->
@@ -253,17 +254,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
