--- a/message-sent-success.html
+++ b/message-sent-success.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/" />
 <meta name="twitter:title" content="" />
 <meta name="twitter:description" content="" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="EN" />
-<link rel="alternate" hreflang="fr" href="" />
-<link rel="alternate" hreflang="it" href="" />
-<link rel="alternate" hreflang="x-default" href="EN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/" />
+<link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/" />
+<link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -96,16 +96,16 @@
 
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background>
 
 	<!-- Document Wrapper
 	============================================= -->
-	<div id="wrapper">
+	<div id=" wrapper">
 
-		<!-- Header
+	<!-- Header
 		============================================= -->
-		<!-- header -->
-		<!-- Only Required if Icons are shown on page -->
+	<!-- header -->
+	<!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
 <link rel="preload" href="./css/font-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
@@ -266,17 +266,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
@@ -291,31 +291,31 @@
   <div class="header-wrap-clone"></div>
 </header> <!-- end of header -->
 
-		<!-- Hero Section
+	<!-- Hero Section
 		============================================= -->
-		<section id="slider" class="slider-element block-hero-19">
+	<section id="slider" class="slider-element block-hero-19">
 
-			<div class="container mt-6">
-				<div class="lightSamaritan-panel-bg rounded-3">
-					<div class="row align-items-center">
-						<div class="col-lg-6 p-5 p-md-6">
-							<div class="mb-lg-6">
-								<h1 class="display-6 fw-semibold text-darkSamaritan">We have received it!</h1>
-								<h2 class="display-7 text-darkSamaritan">Our team will get back to you within
-									24 business hours</h2>
-								<a class="btn btn-primary" type="button" href="/">Back to Home page</a>
-							</div>
+		<div class="container mt-6">
+			<div class="lightSamaritan-panel-bg rounded-3">
+				<div class="row align-items-center">
+					<div class="col-lg-6 p-5 p-md-6">
+						<div class="mb-lg-6">
+							<h1 class="display-6 fw-semibold text-darkSamaritan">We have received it!</h1>
+							<h2 class="display-7 text-darkSamaritan">Our team will get back to you within
+								24 business hours</h2>
+							<a class="btn btn-primary" type="button" href="/">Back to Home page</a>
 						</div>
-						<div class="col-lg-6 p-5 p-md-6">
-							<img src="./images/undraw_opened_re_i38e.svg" alt="">
-						</div>
+					</div>
+					<div class="col-lg-6 p-5 p-md-6">
+						<img src="./images/svg/undraw_opened_re_i38e.svg" alt="">
 					</div>
 				</div>
 			</div>
+		</div>
 
-		</section>
+	</section>
 
-		<style>
+	<style>
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--samaritan);
@@ -359,15 +359,15 @@
 
   </div>
 </footer>
-		<!-- Javascripts
+	<!-- Javascripts
 		============================================= -->
-		<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
+	<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
 
-		<!-- Tawk Chatbox -->
-		<!-- place holder for include('src/blocks/tawk.html') -->
+	<!-- Tawk Chatbox -->
+	<!-- place holder for include('src/blocks/tawk.html') -->
 
-		<!-- Canvas Scripts -->
-		<script src="js/functions.js"></script>
+	<!-- Canvas Scripts -->
+	<script src="js/functions.js"></script>
 </body>
 
 </html>
