--- a/send-us-a-message.html
+++ b/send-us-a-message.html
@@ -27,7 +27,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Send us a message | Trade Duty Refund" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." xmlns:og="http://opengraphprotocol.org/schema/" />
-<meta property="og:url" content="send-us-a-message.html" xmlns:og="http://opengraphprotocol.org/schema/" />
+<meta property="og:url" content="https://tradedutyrefund.com/send-us-a-message.html" xmlns:og="http://opengraphprotocol.org/schema/" />
 <meta property="og:site_name" content="TradeDutyRefund.com" />
 <meta property="og:image" content="https://tradedutyrefund.com/images/OGImage.jpg"
   xmlns:og="http://opengraphprotocol.org/schema/" />
@@ -35,16 +35,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 <meta property="twitter:domain" content="tradedutyrefund.com" />
-<meta property="twitter:url" content="send-us-a-message.html" />
+<meta property="twitter:url" content="https://tradedutyrefund.com/send-us-a-message.html" />
 <meta name="twitter:title" content="Send us a message | Trade Duty Refund" />
 <meta name="twitter:description" content="Get in touch with us easily. Use our simple contact form to send us your name, email, and message. We're here to help and respond within 24 business hours." />
 <meta name="twitter:image" content="https://tradedutyrefund.com/images/OGImage.jpg" />
 
 <!-- HREF -->
-<link rel="alternate" hreflang="en" href="send-us-a-message.htmlEN" />
+<link rel="alternate" hreflang="en" href="https://tradedutyrefund.com/send-us-a-message.html" />
 <link rel="alternate" hreflang="fr" href="https://fr.tradedutyrefund.com/send-us-a-message.html" />
 <link rel="alternate" hreflang="it" href="https://it.tradedutyrefund.com/send-us-a-message.html" />
-<link rel="alternate" hreflang="x-default" href="send-us-a-message.htmlEN" />
+<link rel="alternate" hreflang="x-default" href="https://tradedutyrefund.com/send-us-a-message.html" />
 
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg" />
@@ -269,17 +269,17 @@
               </a>
               <ul class="sub-menu-container">
                 <li class="menu-item">
-                  <a class="menu-link" href="https://tradedutyrefund.com">
+                  <a class="menu-link" href="https://tradedutyrefund.com/">
                     <div>English</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href="https://fr.tradedutyrefund.com">
+                  <a class="menu-link" href="https://fr.tradedutyrefund.com/">
                     <div>Français</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a class="menu-link" href=https://it.tradedutyrefund.com>
+                  <a class="menu-link" href=https://it.tradedutyrefund.com/>
                     <div>Italiano</div>
                   </a>
                 </li>
