loader removed from fast pages

--- a/solutions-for-eu-shippers.html
+++ b/solutions-for-eu-shippers.html
@@ -15,7 +15,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Metatags Import -->
- <!-- SEO Metatags -->
+  <!-- SEO Metatags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
@@ -101,7 +101,8 @@
 
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">  <div id="wrapper">
+<body class="stretched samaritan-background">
+  <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
 <link rel="preload" href="./css/font-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -345,7 +346,8 @@
                 <h3 class="text-transform-none mb-2">Order re-imported in the EU</h3>
                 <p>The order is now back to the EU, ready to be processed at the returns warehouse.</p>
                 <p><a class="text-decoration-underline"
-                    href="TDR-Duty-Free-Returns-to-Europe.html">TDR Duty-Free Returns to Europe</a> will
+                    href="TDR-Duty-Free-Returns-to-Europe.html">TDR Duty-Free Returns to Europe</a>
+                  will
                   get your goods back home at 0% Duties.</p>
               </div>
             </div>
