--- a/solutions-for-us-shippers.html
+++ b/solutions-for-us-shippers.html
@@ -15,7 +15,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Metatags Import -->
- <!-- SEO Metatags -->
+  <!-- SEO Metatags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
@@ -102,7 +102,7 @@
 
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background">
   <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
@@ -350,7 +350,8 @@
                 <h3 class="text-transform-none mb-2">Order re-imported in the US</h3>
                 <p>The order is now back to the US, ready to be processed at the returns warehouse.</p>
                 <p><a class="text-decoration-underline"
-                    href="TDR-Duty-Free-Returns-to-the-US.html">TDR Duty-Free Returns to the US</a> will
+                    href="TDR-Duty-Free-Returns-to-the-US.html">TDR Duty-Free Returns to the US</a>
+                  will
                   get your goods back home at 0% Duties.</p>
               </div>
             </div>
