--- a/404.html
+++ b/404.html
@@ -106,8 +106,7 @@
 
 </head>
 
-<body class="stretched page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500"
-	data-animation-out="fadeOut" data-speed-out="800"></body>
+<body class="stretched">
 
 <!-- Document Wrapper
 	============================================= -->
