--- a/e-book-a-practical-guide-to-customs-duties-on-returns.html
+++ b/e-book-a-practical-guide-to-customs-duties-on-returns.html
@@ -91,8 +91,7 @@
 
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn"
-	data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background">
 
 	<!-- Document Wrapper
 	============================================= -->
