--- a/solutions-for-all-shippers.html
+++ b/solutions-for-all-shippers.html
@@ -14,8 +14,8 @@
 </script>
   <!-- End Google Tag Manager -->
 
- <!-- Metatags Import -->
- <!-- SEO Metatags -->
+  <!-- Metatags Import -->
+  <!-- SEO Metatags -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="x-ua-compatible" content="IE=edge" />
@@ -99,7 +99,7 @@
 
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background">
   <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
