--- a/solutions-for-uk-shippers.html
+++ b/solutions-for-uk-shippers.html
@@ -101,7 +101,7 @@
 
 </head>
 
-<body class="stretched samaritan-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched samaritan-background">
   <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
